<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="Overdraw" >

    <TextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/white"
        android:visibility="gone"
        android:textSize="21sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="423dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        >

        <TextView
            android:id="@+id/text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text = "@string/text_login_name"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_below="@id/text_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textSize="22sp" />
        <TextView
            android:id="@+id/text_password"
            android:layout_below="@id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text = "@string/text_password_name"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_below="@id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="25dp"
            android:inputType="textPassword"
            android:textSize="22sp"
            android:singleLine="true"
            android:imeOptions="actionDone"/>




            <Button
                android:id="@+id/btRegister"
                android:layout_below="@id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text= "@string/button_Login_on"
                />






    </RelativeLayout>



</RelativeLayout>